Fixed Copybara LFS Push Again

--- a/.bazelrc
+++ b/.bazelrc
@@ -20,6 +20,7 @@ test --java_runtime_version=remotejdk_21
 build --tool_java_runtime_version=remotejdk_21
 test --tool_java_runtime_version=remotejdk_21
 
+common --incompatible_strict_action_env
 ################################################################################
 # User bazel configuration
 ################################################################################
